tests/negative/neg_own_anon_reassign.safe
-- Test: neg_own_anon_reassign
-- Description: Reassigning an anonymous access local after declaration.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.3.p100a:ba849e66
-- Expected: REJECT anonymous_access_reassign

package Anonymous_Reassign_Test

   type Data is record
      Value : Integer;


   type Data_Ptr is access Data;

   function Reassign_Borrow
      Owner : Data_Ptr = new ((Value = 1) as Data);
      Other : Data_Ptr = new ((Value = 2) as Data);
      Ref   : access Data = Owner;

      Ref = Other;  -- ERROR: anonymous access reassignment after declaration



